tooling/tree-sitter-zen/grammar.js
const comma = rule => optional(seq(rule, repeat(seq(',', rule)), optional(',')));
module.exports = grammar({
  name: 'zen',
  extras: $ => [/\s/, $.line_comment, $.block_comment],
  word: $ => $.identifier,
  conflicts: $ => [[$.identifier_expression,$.lambda_parameters],[$.qualified_identifier],[$.type_identifier,$.identifier_expression],[$.identifier_expression],],
  rules: {
    source_file: $ => repeat(choice($.import_declaration, $._declaration)),
    import_declaration: $ => seq('import', $.qualified_identifier, optional(seq('as', field('alias', $.identifier))), ';'),
    qualified_identifier: $ => seq($.identifier, repeat(seq('.', $.identifier))),
    _declaration: $ => choice($.struct_declaration, $.enum_declaration, $.interface_declaration, $.impl_declaration, $.function_declaration, $.native_function_declaration, $.const_declaration),
    visibility: _ => 'public',
    struct_declaration: $ => seq(optional($.visibility), 'struct', field('name', $.type_identifier), optional($.generic_parameters), field('body', $.struct_body)),
    struct_body: $ => seq('{', repeat($.struct_field), '}'),
    struct_field: $ => seq(optional($.visibility), field('name', $.identifier), ':', $._type, ';'),
    enum_declaration: $ => seq(optional($.visibility), 'enum', field('name', $.type_identifier), optional($.generic_parameters), $.enum_body),
    enum_body: $ => seq('{', repeat($.enum_variant), '}'),
    enum_variant: $ => seq(field('name', $.identifier), optional(seq('(', comma($._type), ')')), ';'),
    interface_declaration: $ => seq(optional($.visibility), 'interface', field('name', $.type_identifier), optional($.generic_parameters), $.interface_body),
    interface_body: $ => seq('{', repeat($.interface_method), '}'),
    interface_method: $ => seq(optional('async'), 'fn', field('name', $.identifier), $.parameters, '->', $._type, ';'),
    impl_declaration: $ => seq('impl', field('target', $.named_type), optional(seq('for', field('target', $.named_type))), $.impl_body),
    impl_body: $ => seq('{', repeat($.function_declaration), '}'),
    function_declaration: $ => seq(optional($.visibility), optional('async'), 'fn', field('name', $.identifier), optional($.generic_parameters), $.parameters, '->', $._type, field('body', $.block)),
    native_function_declaration: $ => seq(optional($.visibility), 'native', optional('async'), 'fn', field('name', $.identifier), optional($.generic_parameters), $.parameters, '->', $._type, ';'),
    parameters: $ => seq('(', comma($.parameter), ')'),
    parameter: $ => choice('self', seq(field('name', $.identifier), ':', $._type, optional(seq('=', $._expression)))),
    generic_parameters: $ => seq('<', comma($.generic_parameter), '>'),
    generic_parameter: $ => seq(field('name', $.type_identifier), optional(seq(':', $.generic_constraint))),
    generic_constraint: $ => seq($.named_type, repeat(seq('&', $.named_type))),
    _type: $ => choice($.named_type, $.function_type),
    named_type: $ => seq($.type_identifier, repeat(seq('.', $.type_identifier)), optional($.type_arguments)),
    type_arguments: $ => seq('<', comma($._type), '>'),
    function_type: $ => seq('(', comma($._type), ')', '->', $._type),
    type_identifier: $ => $.identifier,
    const_declaration: $ => seq(optional($.visibility), 'const', field('name', $.identifier), ':', $._type, '=', $._expression, ';'),
    block: $ => seq('{', repeat($._statement), optional($._expression), '}'),
    _statement: $ => choice($.let_statement, $.var_statement, $.assignment_statement, $.return_statement, $.defer_statement, $.while_statement, $.for_statement, $.break_statement, $.continue_statement, $.expression_statement),
    let_statement: $ => seq('let', field('name', $.identifier), optional(seq(':', $._type)), '=', $._expression, ';'),
    var_statement: $ => seq('var', field('name', $.identifier), optional(seq(':', $._type)), '=', $._expression, ';'),
    assignment_statement: $ => seq($._expression, '=', $._expression, ';'),
    return_statement: $ => seq('return', optional($._expression), ';'),
    defer_statement: $ => seq('defer', $._expression, ';'),
    while_statement: $ => seq('while', $._expression, $.block),
    for_statement: $ => seq('for', field('name', $.identifier), 'in', $._expression, $.block),
    break_statement: _ => seq('break', ';'),
    continue_statement: _ => seq('continue', ';'),
    expression_statement: $ => choice(seq($._expression, ';'), prec(1,choice($.if_expression, $.match_expression, $.block))),
    _expression: $ => choice($.identifier_expression, $.integer_literal, $.float_literal, $.string_literal, $.char_literal, $.boolean_literal, $.unit_literal, $.parenthesized_expression, $.block, $.if_expression, $.match_expression, $.call_expression, $.member_expression, $.enum_constructor_expression, $.struct_expression, $.struct_update_expression, $.list_expression, $.lambda_expression, $.await_expression, $.propagation_expression, $.unary_expression, $.binary_expression),
    identifier_expression: $ => seq(choice($.identifier,'self'), optional($.type_arguments)),
    parenthesized_expression: $ => seq('(', $._expression, ')'),
    call_expression: $ => prec.left(12,seq(field('function',$._expression), $.arguments)),
    arguments: $ => seq('(', comma(choice($.named_argument,$._expression)), ')'),
    named_argument: $ => seq(field('name',$.identifier), ':', $._expression),
    member_expression: $ => prec.left(12,seq(field('object',$._expression), '.', field('name',$.identifier), optional($.type_arguments))),
    enum_constructor_expression: $ => seq('.', field('name',$.identifier)),
    await_expression: $ => prec.right(11,seq('await',$._expression)),
    propagation_expression: $ => prec.left(10,seq($._expression,'?')),
    unary_expression: $ => prec.right(9,seq(choice('!','-'),$._expression)),
    binary_expression: $ => choice(...[[8,['*']],[7,['+','-']],[6,['<','>','<=','>=']],[5,['==','!=']],[4,['&&']],[3,['||']]].map(([p,ops])=>prec.left(p,seq(field('left',$._expression),field('operator',ops.length === 1 ? ops[0] : choice(...ops)),field('right',$._expression))))),
    list_expression: $ => seq('[', comma($._expression), ']'),
    struct_expression: $ => seq($.named_type, $.field_initializers),
    field_initializers: $ => seq('{', comma($.field_initializer), '}'),
    field_initializer: $ => seq(field('name',$.identifier), ':', $._expression),
    struct_update_expression: $ => prec.left(2,seq($._expression, 'with', $.field_initializers)),
    if_expression: $ => prec.right(seq('if', field('condition',$._expression), $.block, optional(seq('else',choice($.block,$.if_expression))))),
    match_expression: $ => seq('match', field('value',$._expression), $.match_body),
    match_body: $ => seq('{', repeat($.match_arm), '}'),
    match_arm: $ => seq($._pattern, '=>', $._expression, ';'),
    _pattern: $ => choice($.identifier,$.variant_pattern,$.integer_literal,$.string_literal,$.char_literal,$.boolean_literal,$.unit_literal,seq('-',$.integer_literal)),
    variant_pattern: $ => seq(optional($.qualified_identifier), '.', $.identifier, optional(seq('(', comma($._pattern), ')'))),
    lambda_expression: $ => seq(optional('async'), $.lambda_parameters, optional(seq('->',$._type)), $.block),
    lambda_parameters: $ => seq('(', comma(seq($.identifier, optional(seq(':',$._type)))), ')'),
    identifier: _ => /[A-Za-z_][A-Za-z_0-9]*/,
    integer_literal: _ => /[0-9][0-9_]*(i8|i16|i32|i64|u8|u16|u32|u64)?/,
    float_literal: _ => /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?(f32|f64)?/,
    string_literal: $ => seq('"', repeat(choice(/[^"\\\n]+/, $.escape_sequence)), '"'),
    char_literal: $ => seq("'",choice(/[^'\\\n]/,$.escape_sequence),"'"),
    escape_sequence: _ => token(seq('\\',choice(/[\\"'nrt]/,/u\{[0-9a-fA-F]+\}/))),
    boolean_literal: _ => choice('true','false'),
    unit_literal: _ => 'unit',
    line_comment: _ => token(seq('//', /[^\n]*/)),
    block_comment: _ => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
  }
});
